--- a/app/src/main/res/layout/setting_view.xml
+++ b/app/src/main/res/layout/setting_view.xml
@@ -10,12 +10,11 @@
     <!--主题内容-->
     <RelativeLayout
         android:id="@+id/setting_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        >
+        android:layout_marginStart="40dp">
 
         <!--背景颜色-->
 
