--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -5,7 +5,7 @@
     android:id="@+id/root_link"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@mipmap/background"
+    android:background="@mipmap/back"
 
     android:clipChildren="false"
 
