--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@mipmap/background"
+    android:background="@mipmap/back"
     tools:context=".Activity.MainActivity">
 
     <!--包裹布局-->
