--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -5,7 +5,7 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background"
+    android:background="@mipmap/back"
     android:orientation="vertical">
 
 
@@ -52,6 +52,16 @@
                 android:layout_weight="1"
                 app:srcCompat="@drawable/success_dizzy_pic" />
 
+            <com.example.androidapp.SelfView.XLTextView
+                android:layout_width="180dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="恭喜通关!"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="71dp"
@@ -68,16 +78,6 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/success_ballon_right_pic" />
-
-            <com.example.androidapp.SelfView.XLTextView
-                android:layout_width="180dp"
-                android:layout_height="48dp"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:gravity="center"
-                android:text="恭喜通关!"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
 
         </LinearLayout>
 
