--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -10,7 +10,7 @@
 
     <!--关卡列表-->
     <HorizontalScrollView
-        android:id="@+id/level_pager"
+        android:id="@+id/level_page"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/level_pager">
+        app:layout_constraintTop_toBottomOf="@id/level_page">
 
         <!--返回按钮-->
 
