--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -9,7 +9,7 @@
 
     android:clipChildren="false"
 
-    tools:context=".Activity.LinkActivity">
+    tools:context=".activity.LinkActivity">
 
     <!--关卡，道具，暂停信息-->
 
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="52dp">
 
-                <com.example.androidapp.SelfView.XLButton
+                <com.example.androidapp.view.XLButton
                     android:id="@+id/link_pause_btn"
                     android:layout_width="26dp"
                     android:layout_height="43dp"
@@ -69,7 +69,7 @@
                     android:orientation="vertical"
                     tools:ignore="MissingConstraints">
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
@@ -79,7 +79,7 @@
                         android:textColor="@color/white"
                         android:textSize="28sp" />
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:id="@+id/link_level_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -99,7 +99,7 @@
                     android:background="@drawable/prop_bg"
                     android:orientation="horizontal">
 
-                    <com.example.androidapp.SelfView.XLLinearLayout
+                    <com.example.androidapp.view.XLLinearLayout
                         android:layout_width="17dp"
                         android:layout_height="34dp"
                         android:layout_gravity="center"
@@ -113,7 +113,7 @@
                             android:layout_weight="1"
                             android:background="@drawable/store_coin_pic" />
 
-                        <com.example.androidapp.SelfView.XLTextView
+                        <com.example.androidapp.view.XLTextView
                             android:id="@+id/link_money_text"
                             android:layout_width="6dp"
                             android:layout_height="wrap_content"
@@ -122,9 +122,9 @@
                             android:gravity="center"
                             android:text="1000"
                             android:textSize="15sp" />
-                    </com.example.androidapp.SelfView.XLLinearLayout>
+                    </com.example.androidapp.view.XLLinearLayout>
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:layout_width="20dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -134,7 +134,7 @@
                         android:textColor="#FFC107"
                         android:textSize="28sp" />
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:layout_width="20dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -144,7 +144,7 @@
                         android:textColor="#2AF8FF"
                         android:textSize="28sp" />
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:id="@+id/link_score_text"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
