--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
 
     android:background="@mipmap/back"
-    tools:context=".Activity.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <!--包裹布局-->
     <LinearLayout
@@ -57,7 +57,7 @@
 
             //困难模式
 
-            <com.example.androidapp.SelfView.XLButton
+            <com.example.androidapp.view.XLButton
                 android:id="@+id/mode_easy_btn"
                 style="@style/mode_btn"
                 android:layout_width="150dp"
@@ -73,7 +73,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.example.androidapp.SelfView.XLButton
+            <com.example.androidapp.view.XLButton
                 android:id="@+id/mode_normal_btn"
                 style="@style/mode_btn"
                 android:layout_width="150dp"
@@ -88,7 +88,7 @@
                 app:layout_constraintStart_toStartOf="@+id/mode_easy_btn"
                 app:layout_constraintTop_toBottomOf="@+id/mode_easy_btn" />
 
-            <com.example.androidapp.SelfView.XLButton
+            <com.example.androidapp.view.XLButton
                 android:id="@+id/mode_hard_btn"
                 style="@style/mode_btn"
                 android:layout_width="150dp"
