--- a/app/src/main/res/layout/fragment_pause.xml
+++ b/app/src/main/res/layout/fragment_pause.xml
@@ -19,7 +19,7 @@
             android:layout_weight="1"
             app:srcCompat="@drawable/help_pause_peacock_pic" />
 
-        <com.example.androidapp.SelfView.XLTextView
+        <com.example.androidapp.view.XLTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -50,7 +50,7 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <com.example.androidapp.SelfView.XLTextView
+            <com.example.androidapp.view.XLTextView
                 android:id="@+id/XLTextView15"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -81,7 +81,7 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/help_pause_rule1_pic" />
 
-                <com.example.androidapp.SelfView.XLTextView
+                <com.example.androidapp.view.XLTextView
                     android:id="@+id/XLTextView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -107,7 +107,7 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/help_pause_rule2_pic" />
 
-                <com.example.androidapp.SelfView.XLTextView
+                <com.example.androidapp.view.XLTextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -139,7 +139,7 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/help_pause_rule3_pic" />
 
-                <com.example.androidapp.SelfView.XLTextView
+                <com.example.androidapp.view.XLTextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -176,7 +176,7 @@
                         android:layout_weight="3"
                         app:srcCompat="@drawable/prop_tip_pic" />
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:id="@+id/XLTextView10"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -202,7 +202,7 @@
                         android:layout_weight="3"
                         app:srcCompat="@drawable/prop_bomb_pic" />
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:id="@+id/XLTextView13"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -241,7 +241,7 @@
                         android:layout_weight="3"
                         app:srcCompat="@drawable/prop_refresh_pic" />
 
-                    <com.example.androidapp.SelfView.XLTextView
+                    <com.example.androidapp.view.XLTextView
                         android:id="@+id/XLTextView14"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
