--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -63,7 +63,7 @@
 
                 </LinearLayout>
 
-                <com.example.androidapp.view.XLTextView
+                <com.example.androidapp.view.MyTextView
                     style="@style/Setting_Music_Text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -112,7 +112,7 @@
 
                 </LinearLayout>
 
-                <com.example.androidapp.view.XLTextView
+                <com.example.androidapp.view.MyTextView
                     style="@style/Setting_Music_Text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -130,7 +130,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center_horizontal">
 
-                <com.example.androidapp.view.XLButton
+                <com.example.androidapp.view.MyButton
                     android:id="@+id/setting_finish_btn"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
